update something about JVM